# tg

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  flake.nix  result  rustfmt.toml  todos.md  typescript
.cargo/: log_directives
.github/workflows/: ci.yml  errors.yml  warnings.yml
.readme_assets/: usage.md
docs/: ARCHITECTURE.md
docs/.readme_assets/: description.md  installation.sh  usage.md
examples/: config.nix  config.toml
src/: alerts.rs  backfill.rs  chat.rs  config.rs  connectivity.rs  errors.rs  last.rs  lib.rs  main.rs  mtproto.rs  pull.rs  server.rs  shell_init.rs  since.rs  sync.rs  utils.rs
tests/integration/: main.rs
