cargo-features = ["edition2024"]

[package]
name = "tg"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["color-eyre"]
rand = "0.8.5"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.18"
derive-new = "*"
eyre = "^0.6.12"
reqwest = { version = "0.12.24", features = ["rustls-tls"], default-features = false }
serde = "^1.0.228"
serde_json = "^1.0.145"
tokio = { version = "^1.48.0", features = ["full"] }
toml = "^0.9.8"
tracing = "^0.1.41"
v_utils = { version = "^2.7.7", features = ["io", "distributions", "macros"] }
xattr = "1.6.1"

[dev-dependencies]
insta = "1.43.2"
