[package]
name = "tg"
version = "0.6.0"
edition = "2024"
authors = ["Valeriy Sakharov <valeratrades@gmail.com>"]
description = "Telegram CLI client"
license = "BlueOak-1.0.0"
repository = "https://github.com/valeratrades/tg"

[package.metadata.cargo-machete]
ignored = ["color-eyre"]
rand = "0.8.5"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4"
color-eyre = "0.6.5"
config = "0.15.19"
derive-new = "0.7.0"
derive_more = { version = "2", features = ["display", "from_str"] }
dirs = "6.0.0"
eyre = "^0.6.12"
futures = "0.3.31"
futures-util = "^0.3.31"
grammers-client = "0.8.1"
grammers-mtsender = "0.8.1"
grammers-session = "0.8.0"
grammers-tl-types = "0.8.0"
jiff = "0.2"
regex = "1"
reqwest = { version = "0.12.28", features = ["rustls-tls", "json", "multipart"], default-features = false }
serde = "^1.0.228"
serde_json = "^1.0.148"
tokio = { version = "^1.48.0", features = ["full"] }
toml = "^0.9.10"
tracing = "^0.1.44"
v_utils = { version = "^2.15.12", features = ["io", "distributions", "macros", "cli", "xdg"] }
xattr = "1.6.1"

[dev-dependencies]
insta = "1.45.1"
